changed z-index of navbar menu to fix signed in user menu issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,6 +60,7 @@ body {
 }
 #navbar-menu {
   top: 50px;
+  z-index: 1029;
   .navbar-nav>li {
     float: none;
   }
